# soundex-algorithm

./: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
soundex/: app.py
soundex/input/: test.txt
soundex/tests/: test_conversion.py  test_soundex_code.py  test_text.py
